# Medical_Assistant

./: README.md  pyproject.toml
client/: config.py
server/: .env.example  logger.py  main.py  requirements.txt
server/middlewares/: exception_handlers.py
server/modules/: llm.py  load_vectorstore.py  pdf_handlers.py  query_handlers.py
server/routes/: ask_question.py  upload_pdfs.py
